--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <body>	
 	<img id="img_ball" src="assets/images/ball.png">	
-	<img id="img_brick" src="assets/images/brick.png">	
+	<img id="brick" src="assets/images/brick.png">	
 
 	<canvas id="gameScreen" width="800" height="600"></canvas>
 
-	<script src="src/index.js"></script>
+	<script src="index.js"></script>
 </body>
 
 </html>
