--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>	
-	<img id="img_ball" src="assets/images/ball.png">	
+	<img id="ybhubmax10.github.io/images.png" src="ybhubmax10.github.io/images.png">	
 	<img id="brick" src="assets/images/brick.png">	
 
 	<canvas id="gameScreen" width="800" height="600"></canvas>
