--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>	
 	<img id="ybhubmax10.github.io/images.png" src="ybhubmax10.github.io/images.png">	
-	<img id="brick" src="assets/images/brick.png">	
+	<img id="ybhubmax10.github.io/brick.jpeg" src="ybhubmax10.github.io/brick.jpeg">	
 
 	<canvas id="gameScreen" width="800" height="600"></canvas>
 
